# stable-inline-python

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md
src/: lib.rs  macro.rs  main.rs
