[package]
name = "stable-inline-python"
version = "0.1.2"
edition = "2021"
description = "Stable Variant of inline-python."
readme = "README.md"
keywords = ["python", "inline", "embed", "macro"]
repository = "https://github.com/JewishLewish/stable-inline-python"
license = "BSD-2-Clause"
authors = [
	"Lennard B. <lanbrokhman@gmail.com>"
]

[dependencies]
pyo3 = {version ="0.20.0", default-features = false, features = ["auto-initialize"] }
